--- a/rcpj/package.json
+++ b/rcpj/package.json
@@ -9,12 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.5.2",
     "expo": "~51.0.21",
+    "expo-av": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-video": "^6.4.4",
-    "expo-av": "~14.0.6"
+    "react-native-media-controls": "^2.3.0",
+    "react-native-video": "^6.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
