--- a/rcpj/package.json
+++ b/rcpj/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/slider": "^4.5.2",
     "expo": "~51.0.21",
     "expo-av": "~14.0.6",
