--- a/rcpj/package.json
+++ b/rcpj/package.json
@@ -11,13 +11,19 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/slider": "^4.5.2",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@reduxjs/toolkit": "^2.2.7",
     "expo": "~51.0.21",
     "expo-av": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-media-controls": "^2.3.0",
-    "react-native-video": "^6.4.5"
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
+    "react-native-video": "^6.4.5",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
