--- a/rcpj/package.json
+++ b/rcpj/package.json
@@ -13,13 +13,16 @@
     "@react-native-community/slider": "^4.5.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
     "expo": "~51.0.21",
     "expo-av": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-gesture-handler": "^2.20.0",
     "react-native-media-controls": "^2.3.0",
+    "react-native-reanimated": "^3.15.3",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-video": "^6.4.5",
