--- a/rcpj/package.json
+++ b/rcpj/package.json
@@ -20,12 +20,16 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-location": "^2.5.0",
     "react-native-media-controls": "^2.3.0",
     "react-native-reanimated": "^3.15.3",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-sensors": "^7.3.6",
     "react-native-video": "^6.4.5",
+    "react-native-vision-camera": "^4.5.3",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
