--- a/rcpj/package.json
+++ b/rcpj/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "expo": "~51.0.21",
     "expo-av": "~14.0.6",
@@ -21,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-fs": "^2.20.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-location": "^2.5.0",
     "react-native-media-controls": "^2.3.0",
